--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.example.it_english"
+        applicationId "com.ntdvv.it_english"
         minSdk 21
         targetSdk 30
         versionCode 1
